// file: pkg/web/proto/messages/server_config.proto
// version: 1.0.0
// guid: f4e56c59-17af-4da2-8a92-e1a619fe9fba

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/web/proto;webpb";
option features.(pb.go).api_level = API_HYBRID;

// ServerConfig message definition.
message ServerConfig {
  string placeholder = 1;
}
