// file: proto/gcommon/v1/web/messages/session_data.proto
// version: 1.1.0
// guid: f93f7cc5-48c6-4b64-98d2-35549cf19b02

edition = "2023";

package gcommon.v1.web.messages.session_data;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "gcommon/v1/web/enums/session_state.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/proto/gcommon/v1/web/messages/session_data";

// SessionData message definition.
message SessionData {
  // Unique session identifier
  string session_id = 1;

  // User ID associated with the session
  string user_id = 2;

  // Current session state
  WebSessionState state = 3;

  // Session creation timestamp
  google.protobuf.Timestamp created_at = 4 [lazy = true];

  // Last access timestamp
  google.protobuf.Timestamp last_access_at = 5 [lazy = true];

  // Session expiration timestamp
  google.protobuf.Timestamp expires_at = 6 [lazy = true];

  // Client IP address
  string ip_address = 7;

  // Client user agent
  string user_agent = 8;

  // Custom session metadata
  map<string, string> metadata = 9;
}
